created a ssiservice component

--- a/site/docs/ssi/create-did.mdx
+++ b/site/docs/ssi/create-did.mdx
@@ -4,6 +4,9 @@ title: Create a DID
 hide_title: true
 ---
 
+import SSIComponent from '@site/src/components/SSIComponent'
+
+
 # Create a Decentralized Identifier (DID)
 
 In the world of SSI, [DIDs](/docs/web5/learn/decentralized-identifiers) are used to identify any subject (e.g., a person, organization, thing, data model, abstract entity, etc.). In this tutorial we'll show you how to create a DID using the [SSI Service](https://github.com/TBD54566975/ssi-service). 
@@ -11,7 +14,7 @@ In the world of SSI, [DIDs](/docs/web5/learn/decentralized-identifiers) are used
 :::info
 ## Prerequisites
 
-Follow guide to [Clone & Run SSI Service](run-ssi-service).
+<SSIComponent />
 :::
 
 ## Create DID
