--- a/site/docs/ssi/create-did.mdx
+++ b/site/docs/ssi/create-did.mdx
@@ -4,7 +4,7 @@ title: Create a DID
 hide_title: true
 ---
 
-import SSIComponent from '@site/src/components/SSIComponent'
+import SSIPrereq from '@site/src/components/SSIPrereq'
 
 
 # Create a Decentralized Identifier (DID)
@@ -12,9 +12,8 @@ import SSIComponent from '@site/src/components/SSIComponent'
 In the world of SSI, [DIDs](/docs/web5/learn/decentralized-identifiers) are used to identify any subject (e.g., a person, organization, thing, data model, abstract entity, etc.). In this tutorial we'll show you how to create a DID using the [SSI Service](https://github.com/TBD54566975/ssi-service). 
 
 :::info
-## Prerequisites
 
-<SSIComponent />
+<SSIPrereq />
 :::
 
 ## Create DID
