--- a/site/src/pages/open-source/contributing.mdx
+++ b/site/src/pages/open-source/contributing.mdx
@@ -20,7 +20,7 @@ There are numerous ways to contribute to TBD. Here are some suggestions to get s
 - **Participate in Community Events:** We host a variety of community events on our Discord stage every month, ranging from Show & Tells to brainstorming sessions. Got an event idea or wish to host one? Post it in our [#community-events forum](https://discord.com/channels/937858703112155166/1101192919706255430). The DWN project also host office hours every Tuesday. All events will be posted in our events calendar in Discord.
 - **Write a Blog Post:** Are you passionate about writing? Share your expertise and insights with our community! We welcome your contributions to our blog section on the [TBD Developer website](https://developer.tbd.website/blog). Propose blog topics in our [#general channel](https://discord.com/channels/937858703112155166/937858703820980296) on Discord. We can't wait to read and share them with the community!
 - **Propose a New Project:** We believe in community-driven innovation. If you have an idea for a project that helps Web5, tbDEX, or the TBD open source ecosystem, we'd love to talk with you about our [Incubation Program](https://developer.tbd.website/open-source/incubation).
-- **Improve Documentation:** Good documentation is key to the success of any project. You can help improve the quality of our [existing docs](https://github.com/TBD54566975/developer.tbd.website/tree/main/docs) or add new pages.
+- **Improve Documentation:** Good documentation is key to the success of any project. You can help improve the quality of our [existing docs](https://github.com/TBD54566975/developer.tbd.website/tree/main/site/docs) or add new pages.
 - **Showcase Your Work:** Working on a project or written a blog post recently? Share it with the community in our [#share-what-you-do channel](https://discord.com/channels/937858703112155166/1098207585661878402).
 - **Give Feedback:** We're always looking for ways to improve. If you have feedback on our website or docs, feel free to use our [feedback template](https://github.com/TBD54566975/developer.tbd.website/issues/new/choose).
 - **Give Shoutouts:** Is there a project you love or a community/TBD member who's been especially helpful? Feel free to give them a shoutout in our [#general channel](https://discord.com/channels/937858703112155166/937858703820980296).
