--- a/site/blog/2022-08-26-ssi-tbd-web5.md
+++ b/site/blog/2022-08-26-ssi-tbd-web5.md
@@ -91,10 +91,10 @@ The set of standards we rely on and use for Web5 is unbound. However, we have a 
 | [DID Web](https://w3c-ccg.github.io/did-method-web/) | [W3C CCG](https://www.w3.org/community/credentials/) | A DID method that allows bootstrapping trust using a web domain. | W3C Internal Document |
 | [DID Peer](https://identity.foundation/peer-did-method-spec/) | [DIF Identifiers & Discovery](https://identity.foundation/working-groups/identifiers-discovery.html) | A DID method that can be used independent of any central source of truth, intended to be “cheap, fast, scalable, and secure.” | Draft |
 | [Verifiable Credentials Data Model](https://www.w3.org/TR/vc-data-model/) | [W3C Verifiable Credentials Working Group](https://www.w3.org/groups/wg/vc) | The Verifiable Credentials Data Model v1.1. | Recommendation |
-| [Data Integrity](https://github.com/w3c/vc-data-integrity) | [W3C Verifiable Credentials Working Group](https://www.w3.org/groups/wg/vc) | Describes mechanisms for ensuring the authenticity and integrity of structured digital documents…such as digital signatures. | Editor’s Draft |
+| [Data Integrity](https://w3c.github.io/vc-data-integrity/) | [W3C Verifiable Credentials Working Group](https://www.w3.org/groups/wg/vc) | Describes mechanisms for ensuring the authenticity and integrity of structured digital documents…such as digital signatures. | Editor’s Draft |
 | [JSON Web Signature 2020](https://w3c.github.io/vc-jws-2020/) | [W3C Verifiable Credentials Working Group](https://www.w3.org/groups/wg/vc) | A cryptographic suite for the purpose of creating and verifying proofs for JSON Web Signatures using Linked Data Proofs. | Editor’s Draft |
-| [Verifiable Credentials JSON Schema](https://w3c-ccg.github.io/vc-json-schemas/v2/index.html) | [W3C CCG](https://www.w3.org/community/credentials/) | A mechanism to use JSON schemas to back a Verifiable Credential.  | Draft |
-| [Status List 2021](https://w3c-ccg.github.io/vc-status-list-2021/) | [W3C CCG](https://www.w3.org/community/credentials/) | A privacy-preserving, space-efficient, and high-performance mechanism for publishing status information such as suspension or revocation of Verifiable Credentials. | Draft Community Group Report |
+| [Verifiable Credentials JSON Schema](https://www.w3.org/TR/vc-json-schema/) | [W3C CCG](https://www.w3.org/community/credentials/) | A mechanism to use JSON schemas to back a Verifiable Credential.  | Draft |
+| [Status List 2021](https://www.w3.org/TR/vc-status-list/) | [W3C CCG](https://www.w3.org/community/credentials/) | A privacy-preserving, space-efficient, and high-performance mechanism for publishing status information such as suspension or revocation of Verifiable Credentials. | Draft Community Group Report |
 | [VC Proof Format Test Suite](https://identity.foundation/JWS-Test-Suite/) | [DIF Claims & Credentials](https://identity.foundation/working-groups/claims-credentials.html) | A test suite providing interoperability testing and reporting for Verifiable Credentials and Presentation for Linked Data and JWT signature types. | Unofficial Draft |
 | [Presentation Exchange](https://identity.foundation/presentation-exchange/) | [DIF Claims & Credentials](https://identity.foundation/working-groups/claims-credentials.html) | A claim format and transport envelope agnostic format for Verifiers to articulate proof requirements, and for Holders to describe proofs according to those requirements. | Working Group Draft |
 | [Credential Manifest](https://identity.foundation/credential-manifest/) | [DIF Claims & Credentials](https://identity.foundation/working-groups/claims-credentials.html) | A common data format for describing the inputs a Subject must provide to an Issuer for evaluation and issuance of credentials, a means for a Subject to submit an application against those requirements, and a means for an Issuer to fulfill such an application. | Pre-Draft |
@@ -107,9 +107,9 @@ For brevity, I only included fifteen of the most prominent specifications compri
 
 TBD is interested in building a space for community-driven projects, community members gaining merge and moderation access to community resources, and growing a diverse set of contributors interested in a broad set of use cases to be built on Web5. 
 
-We are not interested in becoming a standards body itself. Instead, we are focused on fostering a self-sustaining community focused on building and building on Web5. To facilitate this, we can expand our existing tools like adding sections of our [Forums](https://forums.tbd.website/), creating new [Discord](https://discord.gg/tbd) channels, creating new purpose-specific [GitHub repositories](https://github.com/TBD54566975) and investing in new tools for collaboration like an ideas board, job listing page, or a Web5 wiki. I’d love to see a Web5 incubator similar to [Y Combinator](https://www.ycombinator.com/) that facilitates those building on Web5. The future’s possibilities are endless, and we are eager to adapt to the evolving needs of the community.
+We are not interested in becoming a standards body itself. Instead, we are focused on fostering a self-sustaining community focused on building and building on Web5. To facilitate this, we can expand our existing tools like adding sections of our Forums, creating new [Discord](https://discord.gg/tbd) channels, creating new purpose-specific [GitHub repositories](https://github.com/TBD54566975) and investing in new tools for collaboration like an ideas board, job listing page, or a Web5 wiki. I’d love to see a Web5 incubator similar to [Y Combinator](https://www.ycombinator.com/) that facilitates those building on Web5. The future’s possibilities are endless, and we are eager to adapt to the evolving needs of the community.
 
-Sometimes, we may need more rigorous structure. As such, we are interested in forming working groups in the Web5 community where it makes sense. The output of these groups could be industry coordination, use-case building, software development, or even standards-related work that can be contributed to existing standards bodies. TBD has kicked off one such group to date around Credentials, first focused on creating a path for Know Your Customer (KYC) Credentials. This group already follows such a pattern: having built out [use-case documentation in GitHub](https://github.com/TBD54566975/credentials-working-group), having a purpose-specific [Discord channel](https://discord.com/channels/937858703112155166/969682739005624412), and [forum category](https://forums.tbd.website/c/self-sovereign-identity-users/credentials-working-group/6). Soon we’ll adapt this group to a more “office hours”-style format, allowing anyone in the community to show off their work, ask for assistance, and help shape our project development roadmaps. 
+Sometimes, we may need more rigorous structure. As such, we are interested in forming working groups in the Web5 community where it makes sense. The output of these groups could be industry coordination, use-case building, software development, or even standards-related work that can be contributed to existing standards bodies. TBD has kicked off one such group to date around Credentials, first focused on creating a path for Know Your Customer (KYC) Credentials. This group already follows such a pattern: having built out [use-case documentation in GitHub](https://github.com/TBD54566975/credentials-working-group), having a purpose-specific [Discord channel](https://discord.com/channels/937858703112155166/969682739005624412), and forum category. Soon we’ll adapt this group to a more “office hours”-style format, allowing anyone in the community to show off their work, ask for assistance, and help shape our project development roadmaps. 
 
 Today we have one [GitHub org](https://github.com/TBD54566975), run by the TBD team. We will open up roles for community management. Creating light processes for community-driven moderation and maintenance (e.g. managing pull requests, issues, labels, and milestones), in addition to having projects and repositories started and managed entirely by members of the community. One such idea we are considering is for a new GitHub organization for the “Web5 Community” to foster and highlight community-driven efforts. We’re additionally looking to launch an Incubation program that gives a formal path towards recognizing and promoting the work that begins in a grassroots manner in our community. We plan on making the rest of our tooling community-driven as well: today this means Discord and the Forums, tomorrow it will be a lot more!
 
