imporoved the formatting by adding bullet points

--- a/site/src/content/open-source/governance/content.mdx
+++ b/site/src/content/open-source/governance/content.mdx
@@ -16,14 +16,14 @@
 <h2>Maintainers</h2>
 <p className="text-primary-yellow text-[18px] mb-6">
   Maintainers have write access to GitHub repositories and act as project administrators. They approve and merge pull requests, cut releases, and guide collaboration with the community. They have:
-
-  Commit access to their project's repositories
-  Write access to continuous integration (CI) jobs
-  Both maintainers and non-maintainers may propose changes to source code. The mechanism to propose such a change is a GitHub pull request. Maintainers review and merge (land) pull requests.
-
+  <ul>
+    <li>Commit access to their project's repositories</li>
+    <li>Write access to continuous integration (CI) jobs</li>
+    <li>Both maintainers and non-maintainers may propose changes to source code. The mechanism to propose such a change is a GitHub pull request. Maintainers review and merge (land) pull requests.</li>
+  </ul>
   If a maintainer opposes a proposed change, then the change cannot land. The exception is if the Governance Committee (GC) votes to approve the change despite the opposition. Usually, involving the GC is unnecessary.
 
-  <h3>Maintainer activities</h3>
+  <h3 className="mt-6">Maintainer activities</h3>
   <p>
     <ul>
       <li>Helping users and novice contributors</li>
