--- a/site/src/pages/open-source/contributing.mdx
+++ b/site/src/pages/open-source/contributing.mdx
@@ -24,7 +24,7 @@ There are numerous ways to contribute to TBD. Here are some suggestions to get s
 - **Showcase Your Work:** Working on a project or written a blog post recently? Share it with the community in our [#share-what-you-do channel](https://discord.com/channels/937858703112155166/1098207585661878402).
 - **Give Feedback:** We're always looking for ways to improve. If you have feedback on our website or docs, feel free to use our [feedback template](https://github.com/TBD54566975/developer.tbd.website/issues/new/choose).
 - **Give Shoutouts:** Is there a project you love or a community/TBD member who's been especially helpful? Feel free to give them a shoutout in our [#general channel](https://discord.com/channels/937858703112155166/937858703820980296).
-- **Spread the Word:** Help us reach more people by sharing [TBD's projects](https://github.com/TBD54566975), [website](https://developer.tbd.website/docs/), and/or [X(fka Twitter)](https://twitter.com/TBDDev).
+- **Spread the Word:** Help us reach more people by sharing [TBD's projects](https://github.com/TBD54566975), [website](https://developer.tbd.website/docs/), and/or [Twitter/X](https://twitter.com/TBDDev).
 
 ## Good First Issues
 
