--- a/site/src/content/projects/tbdex/proving-your-identity.mdx
+++ b/site/src/content/projects/tbdex/proving-your-identity.mdx
@@ -2,25 +2,24 @@
 hide_table_of_contents: true
 ---
 
-Alice holds a digital wallet that securely manages all aspects of her identity, including her
-<TooltipWrapper trigger="identifiers">
-  Unique address to personal information that may be required for currency
-  exchange with a regulated financial institution
-</TooltipWrapper>
-, credentials, and <TooltipWrapper trigger="authorizations">
-  permissions granted for another person or app to view or exchange data with
-  you
-</TooltipWrapper> for external apps and entities. Alice uses her wallet to request
-USD in exchange for 100 units of digital currency. Because Alice is <TooltipWrapper trigger="off-ramping">
-  Converting digital money to legacy money, fiat.
-</TooltipWrapper> from digital currency to fiat, most Participating Financial Institutions
-(PFIs) are required to verify Alice’s identity in order to fulfill their regulatory
-and compliance obligations. PFIs that are interested in fulfilling Alice’s request
-reply with a bid as well as their identity verification requirements for fulfillment.
-Alice chooses a bid which will need Know Your Customer (KYC) information (such as
-name, address, date of birth). Alice has already provided all of the necessary information
-to another PFI in the past. So Alice allows her wallet to provide a <TooltipWrapper trigger="verifiable credential">
-  digital certificates that make it easy to share information online in a
-  private and secure way
-</TooltipWrapper> issued from the past PFI to the bidding PFI, along with the currency
+Alice holds a digital wallet that securely manages all aspects of her identity, 
+including her <TooltipWrapper trigger="identifiers">Unique address to personal 
+information that may be required for currency exchange with a regulated financial 
+institution</TooltipWrapper>, credentials, and <TooltipWrapper trigger="authorizations">
+permissions granted for another person or app to view or exchange data with you</TooltipWrapper> 
+for external apps and entities. Alice uses her wallet to request USD in exchange for 
+100 units of digital currency. 
+
+Because Alice is <TooltipWrapper trigger="off-ramping">Converting digital money to 
+legacy money, fiat.</TooltipWrapper> from digital currency to fiat, most Participating Financial 
+Institutions(PFIs) are required to verify Alice’s identity in order to fulfill 
+their regulatory and compliance obligations. PFIs that are interested in fulfilling 
+Alice’s request reply with a bid as well as their identity verification requirements 
+for fulfillment. 
+
+Alice chooses a bid which will need Know Your Customer (KYC) 
+information (such as name, address, date of birth). Alice has already provided all 
+of the necessary information to another PFI in the past. So, Alice allows her wallet 
+to provide a <TooltipWrapper trigger="verifiable credential">digital certificates 
+that make it easy to share information online in a private and secure way</TooltipWrapper> issued from the past PFI to the bidding PFI, along with the currency
 to exchange. The PFI verifies the credential and continues with fulfillment.
