fix: Fix docs link at `/api/web5-js/dwn/protocol/` page

--- a/site/api/web5-js/dwn/protocol.mdx
+++ b/site/api/web5-js/dwn/protocol.mdx
@@ -4,7 +4,7 @@ import CodeSnippet from '@site/src/components/CodeSnippet';
 
 
 ## Overview
-Every modifying method of the [Protocols](protocols) class returns an instance of a `Protocol` object, which is a representation of the protocol(s) involved in the operation. [Learn more about Protocols](/docs/web5/learn/protocols).
+Every modifying method of the [Protocols](../protocols) class returns an instance of a `Protocol` object, which is a representation of the protocol(s) involved in the operation. [Learn more about Protocols](/docs/web5/learn/protocols).
 
 <Divider type="slash"/>
 
