fix Records link

--- a/site/api/web5-js/dwn/record.mdx
+++ b/site/api/web5-js/dwn/record.mdx
@@ -3,7 +3,7 @@ import ApiDetails from '@site/src/components/ApiDetails';
 
 
 ## Overview
-Every modifying method of the [Records](records) class returns an instance of a `Record` object, which is a representation of the record(s) involved in the operation
+Every modifying method of the [Records](/api/web5-js/dwn/records) class returns an instance of a `Record` object, which is a representation of the record(s) involved in the operation
 
 <Divider type="slash"/>
 
@@ -40,7 +40,7 @@ Every modifying method of the [Records](records) class returns an instance of a 
         <li>recipient</li>
         <li>schema</li>
       </ul>
-    </div>    
+    </div>
   </div>
 </details>
 
@@ -70,7 +70,7 @@ A property with the following convenience methods that read out the data of the 
         field: 'stream()',
         value: 'Returns the raw stream of bytes for the data',
       },
-    },        
+    },
   ]}
 />
 
