--- a/site/blog/2023-06-23-did-hack.md
+++ b/site/blog/2023-06-23-did-hack.md
@@ -34,8 +34,20 @@ The Decentralized Identity Foundation organized [did:hack](https://didhack.xyz/)
 The 4-day virtual event included sessions from TBD, SpruceID, Dock.io, Aviary Tech, Trinsic, and Danube Tech - all providing educational sessions on ecosystem tools that enable decentralized identity and verifiable credentials.
 
 
-<div align="center">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/rpaUtaXnk94" title="YouTube video player" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<div className="flex justify-center">
+<div className="w-full sm:w-auto sm:max-w-[560px]">
+<div className="overflow-hidden relative" style={{ paddingTop: "56.25%" }}>
+<iframe 
+ width="560"
+height="315"
+src="https://www.youtube.com/embed/rpaUtaXnk94" 
+title="YouTube video player"
+frameBorder="0"
+allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+allowfullscreen
+className="absolute top-0 left-0 w-full h-full"></iframe>
+</div>
+</div>
 </div>
 
 <!--truncate-->
@@ -66,9 +78,23 @@ D-PFin, a team comprised of [Moises Jaramillo](https://www.linkedin.com/in/moise
 We're delighted that the D-PFin team chose Web5 to build their decentralized app! It's a testament of the power of coupling decentralized personal data stores with decentralized identity. Be sure to watch the team's final presentation below.
 
 
-<div align="center">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/0o9PJ1HmNuQ?start=1500" title="YouTube video player" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<div className="flex justify-center">
+  <div className="w-full sm:w-auto sm:max-w-[560px]">
+    <div className="overflow-hidden relative" style={{ paddingTop: "56.25%" }}>
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/0o9PJ1HmNuQ?start=1500"
+        title="YouTube video player"
+        frameBorder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen
+        className="absolute top-0 left-0 w-full h-full"
+      ></iframe>
+    </div>
+  </div>
 </div>
+
 
 
 
