--- a/site/src/pages/open-source/contributing.mdx
+++ b/site/src/pages/open-source/contributing.mdx
@@ -54,16 +54,16 @@ We've highlighted some repositories with new open issues to help you get started
 
 ## Upcoming Community Events
 
-<a href="https://discord.com/events/937858703112155166/1154126364484583465">
+<a href="https://discord.com/events/937858703112155166/1158855382496727191">
   <img
     style={{ height: '446px' }}
-    src="https://hackmd.io/_uploads/Bk2Mr77xT.png"
+    src="https://hackmd.io/_uploads/H12LMn8G6.png"
   />
 </a>
-<a href="https://discord.com/events/937858703112155166/1154132976519618591">
+<a href="https://discord.com/events/937858703112155166/1166756631963521024">
   <img
     style={{ height: '446px' }}
-    src="https://hackmd.io/_uploads/ByU7rm7x6.png"
+    src="https://hackmd.io/_uploads/SJQPz2LMT.png"
   />
 </a>
 
