--- a/site/docs/ssi/create-did.mdx
+++ b/site/docs/ssi/create-did.mdx
@@ -4,7 +4,7 @@ title: Create a DID
 hide_title: true
 ---
 
-import SSIPrereq from '@site/src/components/SSIPrereq'
+import SSIService from '@site/src/components/SSIService'
 
 
 # Create a Decentralized Identifier (DID)
@@ -12,8 +12,13 @@ import SSIPrereq from '@site/src/components/SSIPrereq'
 In the world of SSI, [DIDs](/docs/web5/learn/decentralized-identifiers) are used to identify any subject (e.g., a person, organization, thing, data model, abstract entity, etc.). In this tutorial we'll show you how to create a DID using the [SSI Service](https://github.com/TBD54566975/ssi-service). 
 
 :::info
+## Prerequisites
 
-<SSIPrereq />
+<SSIService 
+content='1. Follow guide to'
+link="/docs/ssi/run-ssi-service"
+linkText=" Clone & Run SSI Service."
+/>
 :::
 
 ## Create DID
