--- a/site/docs/tbdex/index.mdx
+++ b/site/docs/tbdex/index.mdx
@@ -1,4 +1,4 @@
-# tbDEX Overview Guide
+# Overview
 
 
 ## What is tbDEX?
@@ -34,7 +34,7 @@ The integration of financial institutions and wallet applications into one proto
 
 tbDEX bridges digital and fiat currencies by providing a common protocol for the fundamental actions of liquidity exchange.
 
-Note that tbDEX is not a payment processor, wallet/bank account, or any other core financial service provider. Instead, tbDEX focuses on enabling commerce rather than executing transactions. \
+Note that tbDEX is not a payment processor, wallet/bank account, or any other core financial service provider. Instead, tbDEX focuses on enabling commerce rather than executing transactions.
 
 
 There are three types of actors involved in a tbDEX network:
@@ -51,46 +51,46 @@ As part of negotiating an exchange, PFIs and Wallets need to be able to message 
 
 
 
-* Quote - the PFI should be able to make a bid on the RFQ
-* Offer - the user should be able to express the financial exchange they are requesting.
-* Order - both parties should be able to agree upon a settlement method for the transaction and smoothly off-ramp from the tbDEX platform to the desired method of settlement.
+* **Quote**: the PFI should be able to make a bid on the RFQ
+* **Offer**: the user should be able to express the financial exchange they are requesting.
+* **Order**: both parties should be able to agree upon a settlement method for the transaction and smoothly off-ramp from the tbDEX platform to the desired method of settlement.
 
 
-### Example Scenario:
+## Example Scenario
 
 Alice holds a digital wallet that securely manages her identity, including her identifiers, credentials, and authorizations for external apps and entities. Alice wants to exchange 100 units of digital currency for USD. Because Alice is off-ramping from digital currency to fiat, most PFIs are required to verify Alice’s identity in order to fulfill their regulatory and compliance obligations.
 
 
 
-1. **Alice** informs her wallet of her need to make the exchange. \
+1. **Alice** informs her wallet of her need to make the exchange.
 
-2. **Alice's Wallet** discovers PFIs that offer this currency pairing, compares their credential requirements with the VCs Alice holds, and if necessary, applies for any missing VCs. \
+2. **Alice's Wallet** discovers PFIs that offer this currency pairing, compares their credential requirements with the VCs Alice holds, and if necessary, applies for any missing VCs.
 
-3. The **Credential Issuer** (if applicable) issues the required VCs to Alice, which are stored in her wallet. \
+3. The **Credential Issuer** (if applicable) issues the required VCs to Alice, which are stored in her wallet.
 
-4. **Alice’s Wallet** presents the offerings to Alice, allowing her to choose the one she’d like to transact with. \
+4. **Alice’s Wallet** presents the offerings to Alice, allowing her to choose the one she’d like to transact with.
 
-5. **Alice** considers the reputation of the PFIs as well as the transaction fees before choosing a PFI. \
+5. **Alice** considers the reputation of the PFIs as well as the transaction fees before choosing a PFI. 
 
-6. **Alice's Wallet** creates a request for a quote (RFQ) with Alice's DID, the details of her request, and the required VC - which Alice has already obtained from another PFI in the past. \
+6. **Alice's Wallet** creates a request for a quote (RFQ) with Alice's DID, the details of her request, and the required VC - which Alice has already obtained from another PFI in the past. 
 
-7. The **PFI** receives the RFQ, verifies the credentials, and responds with a quote. \
+7. The **PFI** receives the RFQ, verifies the credentials, and responds with a quote. 
 
-8. **Alice's Wallet** accepts the quote by placing the order. \
+8. **Alice's Wallet** accepts the quote by placing the order. 
 
 9. The **PFI** fulfills the order.
 
 Without the need for any centralized authority, tbDEX provided a groundbreaking bridge between the traditional financial system and the emerging world of digital currencies by allowing Alice to exchange her digital currency for USD. 
 
-By leveraging decentralized technologies, tbDEX: \
+By leveraging decentralized technologies, tbDEX: 
 
 
 
 
-* offers a permissionless and inclusive platform that allows for the direct transfer of funds across different currency systems and borders \
+* Offers a permissionless and inclusive platform that allows for the direct transfer of funds across different currency systems and borders 
 
-* enforces competition among PFIs, ensuring more equitable transaction fees and services for users \
+* Enforces competition among PFIs, ensuring more equitable transaction fees and services for users 
 
-* upholds necessary regulatory standards, requiring identity verification for transactions converting digital currency to fiat, aligning with compliance mandates. 
+* Upholds necessary regulatory standards, requiring identity verification for transactions converting digital currency to fiat, aligning with compliance mandates. 
 
 As a result, tbDEX stands as a pivotal innovation for seamless financial exchanges, offering a versatile solution for developers, institutions, and individuals alike. If you’re ready to build your own apps using tbDEX, check out our [SDKs](https://github.com/TBD54566975/tbdex).
