--- a/site/docs/tbdex/index.mdx
+++ b/site/docs/tbdex/index.mdx
@@ -13,6 +13,7 @@ tbDEX is architected on Web5 infrastructure, utilizing decentralized technologie
 
 * [Decentralized Identifiers](https://developer.tbd.website/docs/web5/learn/decentralized-identifiers) (DIDs)
 * [Verifiable Credentials](https://developer.tbd.website/docs/web5/learn/verifiable-credentials) (VCs)
+* [Decentralized Web Notes](https://developer.tbd.website/docs/web5/learn/decentralized-web-nodes) (DWNs)
 
 
 ## Why do we need tbDEX?
