--- a/site/api/web5-js/dwn/records.mdx
+++ b/site/api/web5-js/dwn/records.mdx
@@ -336,7 +336,7 @@ Reads a record stored in the user's local DWN, remote DWN, or another party's DW
 
 <CodeSnippet functionName='readRecordFromId'/>
 
-<CodeSnippet functionName='readRecordFromBobDwn'/>
+<CodeSnippet functionName='readRecordByIdFromDid'/>
 
 
 <Divider type="slash"/>
