updating tbdex guide

--- a/site/docs/tbdex/index.mdx
+++ b/site/docs/tbdex/index.mdx
@@ -48,7 +48,7 @@ There are essentially three types of actors involved in a tbDEX network:
 
 ### Messages
 
-Using the tbDEX protocol, PFIs and wallet holders - both identified by unique DIDs - can exchange messages. These messages, which are used to negotiate exchanges, may be stored in DWNs for scenarios that require self-custody.
+Using the tbDEX protocol, PFIs and wallet holders - both identified by unique DIDs - can exchange messages to negotiate an exchange.
 
 As part of negotiating an exchange, PFIs and wallets message each other using the following tbDEX message types:
 
