--- a/site/docs/web5/_quickstart-02-prereqs-and-installation.mdx
+++ b/site/docs/web5/_quickstart-02-prereqs-and-installation.mdx
@@ -13,15 +13,7 @@ import PackageJson from '@site/src/components/PackageJson';
 <h2>Prerequisites</h2>
 <ul>
   <li>
-    <p>
-      <a
-        href="https://docs.npmjs.com/downloading-and-installing-node-js-and-npm"
-        target="_blank"
-      >
-        Node Package Manager
-      </a>
-      , <code>npm</code>, installed and on your system's <code>$PATH</code>.
-    </p>
+    <p><a href="https://docs.npmjs.com/downloading-and-installing-node-js-and-npm" target="_blank">Node Package Manager</a>, <code>npm</code>, installed and on your system's <code>$PATH</code>.</p>
   </li>
   <li>
     <p>Node version 18 and above</p>
