enclosed description in quotes

--- a/site/blog/2023-11-18-la-wallet.md
+++ b/site/blog/2023-11-18-la-wallet.md
@@ -1,7 +1,7 @@
 ---
 slug: 2023-11-18-la-wallet
 title: "A Digital Toast: My Encounter with Louisiana's Mobile Driver's License"
-description: Discover how Louisiana's mDL made my wine night simple, secure, and surprisingly fun!
+description: "Discover how Louisiana's mDL made my wine night simple, secure, and surprisingly fun!"
 authors:
   name: Angie Jones
 tags: [Verifiable Credentials, Mobile Drivers License, mDL]
