updating blog post

--- a/site/blog/2023-11-18-la-wallet.md
+++ b/site/blog/2023-11-18-la-wallet.md
@@ -43,7 +43,7 @@ In the simplest terms, [Verifiable Credentials](https://developer.tbd.website/do
 
 When the store connected to my LA Wallet, it wasn't just pulling up a digital version of my driver's license. Instead, the app used a Verifiable Credential – a piece of digital data that proves certain information about me without revealing everything. In this case, it confirmed that I am over the age of 21. The beauty of this system is in its respect for privacy; it didn't disclose my exact age, or any other personal detail that would be available had I shared my full driver's license.
 
-Once my age was verified, the vendor allowed the purchase, and the delivery proceeded as planned. The entire process was seamless, fast, and respectful of my privacy.
+Once my age was verified, the vendor allowed the purchase, and the delivery proceeded as planned. The entire process was seamless, fast, and respectful of my privacy. This is particularly interesting in my scenario where there's likely legal responsibilities for the delivery company as well as the wine vendor to verify my age. My mDL is a trusted source that can provide this proof to all of the involved parties without sharing all of my details.
 
 This experience is a prime example of how Verifiable Credentials can simplify and secure everyday transactions. As we move more into the digital realm, the need for secure, private, and efficient verification methods becomes increasingly crucial. Verifiable Credentials meet these needs by offering a way to share necessary information without over-sharing.
 
